<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/btn_main_new_quiz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="newQuiz"
        android:paddingBottom="32dp"
        android:paddingTop="32dp"
        android:text="@string/main_menu_btn_new_quiz" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_main_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="edit"
            android:paddingBottom="32dp"
            android:paddingTop="32dp"
            android:text="@string/main_menu_btn_edit" />

        <Button
            android:id="@+id/btn_main_import"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="32dp"
            android:paddingTop="32dp"
            android:text="@string/main_menu_btn_import" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_main_take_quiz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="takeQuiz"
            android:paddingBottom="32dp"
            android:paddingTop="32dp"
            android:text="@string/main_menu_btn_take_quiz" />

        <Button
            android:id="@+id/btn_main_see_results"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="32dp"
            android:paddingTop="32dp"
            android:text="@string/main_menu_btn_see_results" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_main_learn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="learn"
            android:paddingBottom="32dp"
            android:paddingTop="32dp"
            android:text="@string/main_menu_btn_learn" />

        <Button
            android:id="@+id/btn_main_quit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="quit"
            android:paddingBottom="32dp"
            android:paddingTop="32dp"
            android:text="@string/main_menu_btn_quit" />
    </LinearLayout>

</LinearLayout>